(install
  (section lib)
  (files (binaryTree.links as stdlib/binaryTree.links)
         (comparators.links as stdlib/comparators.links)
         (mvu.links as stdlib/mvu.links)
         (mvuAttrs.links as stdlib/mvuAttrs.links)
         (mvuEvents.links as stdlib/mvuEvents.links)
         (mvuHTML.links as stdlib/mvuHTML.links)
         (mvuSubscriptions.links as stdlib/mvuSubscriptions.links)
         (linearMvu.links as stdlib/linearMvu.links)
         (linearMvuAttrs.links as stdlib/linearMvuAttrs.links)
         (linearMvuCommands.links as stdlib/linearMvuCommands.links)
         (linearMvuEvents.links as stdlib/linearMvuEvents.links)
         (linearMvuHTML.links as stdlib/linearMvuHTML.links)
         (linearMvuSubscriptions.links as stdlib/linearMvuSubscriptions.links))
  (package links))
